@@ -152,7 +152,7 @@ public class AddSongWindow : Window
 			if (PlaySongsEvent != null)
 				PlaySongsEvent (view.SelectedPointers);
 
-			search_entry.Text = "";
+			Reset ();
 
 			break;
 		case 2: /* Queue */
@@ -167,7 +167,7 @@ public class AddSongWindow : Window
 		default:
 			window.Visible = false;
 
-			search_entry.Text = "";
+			Reset ();
 
 			break;
 		}
@@ -181,7 +181,7 @@ public class AddSongWindow : Window
 
 		args.RetVal = true;
 
-		search_entry.Text = "";
+		Reset ();
 	}
 
 	private bool FitsCriteria (Song s, string [] search_bits)
@@ -198,7 +198,7 @@ public class AddSongWindow : Window
 		return (n_matches == search_bits.Length);
 	}
 
-	private bool SearchIdleFunc ()
+	private bool Search ()
 	{
 		List l = new List (IntPtr.Zero, typeof (int));
 
@@ -208,17 +208,27 @@ public class AddSongWindow : Window
 		if (search_entry.Text.Length < 3)
 			max_len = FakeLength;
 
-		string [] search_bits = search_entry.Text.ToLower ().Split (' ');
-
 		int i = 0;
-		foreach (Song s in Muine.DB.Songs.Values) {
-			if (FitsCriteria (s, search_bits)) {
+		if (search_entry.Text.Length > 0) {
+			string [] search_bits = search_entry.Text.ToLower ().Split (' ');
+
+			foreach (Song s in Muine.DB.Songs.Values) {
+				if (FitsCriteria (s, search_bits)) {
+					l.Append (s.Handle);
+				
+					i++;
+					if (max_len > 0 && i >= max_len)
+						break;
+				}	
+			}
+		} else {
+			foreach (Song s in Muine.DB.Songs.Values) {
 				l.Append (s.Handle);
 				
 				i++;
 				if (max_len > 0 && i >= max_len)
 					break;
-			}	
+			}
 		}
 
 		view.RemoveDelta (l);
@@ -236,12 +246,18 @@ public class AddSongWindow : Window
 
 	private uint search_idle_id = 0;
 
+	private bool process_changes_immediately = false;
+	
 	private void HandleSearchEntryChanged (object o, EventArgs args)
 	{
-		if (search_idle_id > 0)
-			GLib.Source.Remove (search_idle_id);
+		if (process_changes_immediately)
+			Search ();
+		else {
+			if (search_idle_id > 0)
+				GLib.Source.Remove (search_idle_id);
 
-		search_idle_id = GLib.Idle.Add (new GLib.IdleHandler (SearchIdleFunc));
+			search_idle_id = GLib.Idle.Add (new GLib.IdleHandler (Search));
+		}
 	}
 
 	private void HandleSearchEntryKeyPressEvent (object o, EventArgs a)
@@ -310,5 +326,14 @@ public class AddSongWindow : Window
 		view.Remove (song.Handle);
 
 		SelectFirstIfNeeded ();
+	}
+
+	private void Reset ()
+	{
+		process_changes_immediately = true;
+		
+		search_entry.Text = "";
+
+		process_changes_immediately = false;
 	}
 }
